# onvif-library

./: README.md  build-gsoap.sh  build-library-discovery.sh  build-library-test.sh  clean.sh  generate-library-device.sh  generate-library-discovery.sh  run-all.sh
onvif-library-discovery/: CMakeLists.txt
onvif-library-discovery/include/libonvif/: onvifdiscovery.h
onvif-library-discovery/src/: data.cpp  data.h  discovery.cpp  discovery.h  onvifdiscovery.cpp
onvif-library-test/: CMakeLists.txt  main.cpp
